--- a/client/src/components/styles/Home.css
+++ b/client/src/components/styles/Home.css
@@ -1,300 +1,267 @@
 .container {
-          background-color: #fff;
-          display: flex;
-          flex-direction: column;
-        }
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 0px;
+}
 
-        .banner-image {
-          aspect-ratio: 7.14;
-          object-fit: cover;
-          width: 100%;
-        }
+.banner-image {
+  aspect-ratio: 7.16;
+  object-fit: cover;
+  width: 100%;
+  margin: 0%;
+  padding: 0px;
+}
 
-        .main-content {
-          display: flex;
-          flex-direction: column;
-          min-height: 758px;
-          overflow: hidden;
-          padding: 12px 39px 46px;
-          position: relative;
-          width: 100%;
-        }
+.main-content {
+  display: flex;
+  flex-direction: column;
+  min-height: 758px;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+}
 
-        .background-image {
-          height: 100%;
-          inset: 0;
-          object-fit: cover;
-          position: absolute;
-          width: 100%;
-        }
+.background-image {
+  height: 100%;
+  inset: 0;
+  object-fit: cover;
+  position: absolute;
+  width: 100%;
+}
 
-        .announcements-section {
-          display: flex;
-          gap: 20px;
-          position: relative;
-          width: 100%;
-        }
+.section-title {
+  padding-right: 38%;
+  padding-left: 10px;
+}
 
-        .section-title {
-          color: #000;
-          flex: 1;
-          font: 700 32px Inter, sans-serif;
-          margin: auto 0;
-        }
+.announcements-section {
+  display: flex;
+  gap: 10px;
+  position: relative;
+  width: 100%;
+  max-height: 40px;
+  align-items: center;
+  margin-top: 7px;
+  position: relative;
+}
 
-        .announcements-filters {
-          display: flex;
-          gap: 10px;
-        }
 
-        .filter-container {
-          background-color: #fff;
-          border-radius: 10px;
-          display: flex;
-          flex: 1;
-          font-size: 20px;
-          gap: 20px;
-          justify-content: space-between;
-          padding-left: 60px;
-        }
 
-        .filter-label {
-          color: #000;
-          font: 400 20px Inter, sans-serif;
-          margin: auto 0;
-        }
+.content-section {
+  margin-top: 7px;
+  padding-left: 10px;
+  position: relative;
+}
 
-        .filter-button {
-          background-color: #827979;
-          border-radius: 10px;
-          color: #fff;
-          font: 700 20px Inter, sans-serif;
-          justify-content: center;
-          padding: 9px 14px;
-        }
+.content-columns {
+  display: flex;
+  gap: 20px;
+}
 
-        .filter-icon {
-          align-items: center;
-          background-color: #fff;
-          border-radius: 10px;
-          display: flex;
-          justify-content: center;
-          padding: 0 60px;
-        }
+.column {
+  display: flex;
+  flex-direction: column;
+  line-height: normal;
+  width: 65%;
+}
 
-        .filter-icon-image {
-          height: 32px;
-          object-fit: contain;
-          width: 32px;
-        }
+.search-input {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-right: 8px;
+  height: 20px;
+  align-self: center;
+}
 
-        .content-section {
-          margin-top: 7px;
-          position: relative;
-        }
+.search-input:focus {
+  outline: none;
+  border-color: #007bff;
+  /* Example color for focus state */
+}
 
-        .content-columns {
-          display: flex;
-          gap: 20px;
-        }
 
-        .column {
-          display: flex;
-          flex-direction: column;
-          line-height: normal;
-          width: 68%;
-        }
+.announcements-column {
+  margin-left: 0;
+}
 
-        .announcements-column {
-          margin-left: 0;
-        }
+.announcements-container {
+  background-color: #d9d9d9;
+  max-height: 630px;
+  /* Adjust the maximum height as needed */
+  overflow-y: auto;
+  display: flex;
+  flex-grow: 1;
+  gap: 15px;
+  padding: 14px 17px 46px;
+  position: relative;
+  width: 100%;
+  border-radius: 10px;
+}
 
-        .announcements-container {
-          background-color: #d9d9d9;
-          display: flex;
-          flex-grow: 1;
-          gap: 15px;
-          padding: 14px 17px 46px;
-          position: relative;
-          width: 100%;
-        }
+.announcements-list {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  font-weight: 600;
+  width: fit-content;
+}
 
-        .announcements-list {
-          display: flex;
-          flex: 1;
-          flex-direction: column;
-          font-weight: 600;
-          width: fit-content;
-        }
+.announcement-item {
+  background-color: #8f0000;
+  display: flex;
+  gap: 20px;
+  margin-top: 12px;
+  padding: 16px 21px;
+  border-radius: 10px;
+}
 
-        .announcement-item {
-          background-color: #8f0000;
-          display: flex;
-          gap: 20px;
-          margin-top: 12px;
-          padding: 16px 21px;
-        }
+.announcement-title {
+  color: #fff;
+  flex: 1;
+  font: 20px Inter, sans-serif;
+  text-align: center;
+}
 
-        .announcement-title {
-          color: #fff;
-          flex: 1;
-          font: 20px Inter, sans-serif;
-          text-align: center;
-        }
+.announcement-description {
+  background-color: #d9d9d9;
+  color: #000;
+  font: 400 20px/20px Inter, sans-serif;
+  padding: 36px 18px 116px;
+  text-align: center;
+  border-radius: 10px;
+}
 
-        .announcement-description {
-          background-color: #d9d9d9;
-          color: #000;
-          font: 400 20px/20px Inter, sans-serif;
-          padding: 36px 18px 116px;
-          text-align: center;
-        }
+.announcement-expand {
+  align-self: start;
+  background-color: #8f0000;
+  color: white;
+  font: 24px Inter, sans-serif;
+  justify-content: center;
+  padding: 5px 0;
+  white-space: nowrap;
+}
 
-        .announcement-expand {
-          align-self: start;
-          background-color: #fff;
-          color: #e18a07;
-          font: 24px Inter, sans-serif;
-          justify-content: center;
-          padding: 5px 0;
-          white-space: nowrap;
-        }
+.announcement-expand-text {
+  text-align: center;
+  border-radius: 8px;
+}
 
-        .announcement-expand-text {
-          text-align: center;
-        }
+.temple-info-column {
+  margin-left: 20px;
+  width: 30%;
+  padding-bottom: 10px;
+}
 
-        .announcements-pagination {
-          align-self: start;
-          background-color: #efeaea;
-          color: #000;
-          display: flex;
-          flex-direction: column;
-          font-size: 16px;
-          font-weight: 400;
-          padding: 22px 5px 80px;
-          text-align: center;
-          white-space: nowrap;
-        }
+.temple-info-container {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  font-size: 16px;
+  position: relative;
+  border-radius: 10px;
+}
 
-        .pagination-dots {
-          background-color: #c7c6c6;
-          font: 400 16px Inter, sans-serif;
-          justify-content: center;
-          padding: 26px 0;
-        }
+.temple-hours {
+  background-color: #d9d9d9;
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  font-weight: 400;
+  padding: 25px 11px 40px;
+  text-align: center;
+  border-radius: 10px;
+}
 
-        .temple-info-column {
-          margin-left: 20px;
-          width: 32%;
-        }
+.temple-hours-content {
+  font: 400 16px Inter, sans-serif;
+}
 
-        .temple-info-container {
-          display: flex;
-          flex: 1;
-          flex-direction: column;
-          font-size: 16px;
-          position: relative;
-        }
+.temple-address {
+  font: 600 16px Inter, sans-serif;
+  margin-top: 25px;
+}
 
-        .temple-hours {
-          background-color: #d9d9d9;
-          color: #000;
-          display: flex;
-          flex-direction: column;
-          font-weight: 400;
-          padding: 25px 11px 40px;
-          text-align: center;
-        }
+.temple-address-label {
+  font-weight: 600;
+  font-size: 20px;
+}
 
-        .temple-hours-content {
-          font: 400 16px Inter, sans-serif;
-        }
+.temple-address-details {
+  align-items: start;
+  align-self: center;
+  display: flex;
+  gap: 18px;
+  justify-content: space-between;
+  margin-top: 24px;
+}
 
-        .temple-address {
-          font: 600 16px Inter, sans-serif;
-          margin-top: 25px;
-        }
+.temple-address-text {
+  font: 400 16px Inter, sans-serif;
+}
 
-        .temple-address-label {
-          font-weight: 600;
-          font-size: 20px;
-        }
+.temple-map {
+  aspect-ratio: 1.04;
+  border-radius: 50%;
+  object-fit: cover;
+  width: 54px;
+}
 
-        .temple-address-details {
-          align-items: start;
-          align-self: center;
-          display: flex;
-          gap: 18px;
-          justify-content: space-between;
-          margin-top: 24px;
-        }
+.newsletter-signup {
+  background-color: #d9d9d9;
+  display: flex;
+  flex-direction: column;
+  padding: 26px;
+  text-align: center;
+  border-radius: 10px;
+}
 
-        .temple-address-text {
-          font: 400 16px Inter, sans-serif;
-        }
+.newsletter-signup-header {
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  padding: 0 44px;
+}
 
-        .temple-map {
-          aspect-ratio: 1.04;
-          border-radius: 50%;
-          object-fit: cover;
-          width: 54px;
-        }
+.newsletter-signup-title {
+  font: 600 16px Inter, sans-serif;
+}
 
-        .newsletter-signup {
-          background-color: #d9d9d9;
-          display: flex;
-          flex-direction: column;
-          margin-top: 13px;
-          padding: 26px 0;
-          text-align: center;
-        }
+.newsletter-signup-required {
+  align-self: end;
+  font: 300 16px Inter, sans-serif;
+  margin-top: 8px;
+}
 
-        .newsletter-signup-header {
-          color: #000;
-          display: flex;
-          flex-direction: column;
-          padding: 0 44px;
-        }
+.newsletter-signup-required-text {
+  color: rgba(0, 0, 0, 1);
+  font-size: 13px;
+}
 
-        .newsletter-signup-title {
-          font: 600 16px Inter, sans-serif;
-        }
+.newsletter-signup-form {
+  display: flex;
+  flex-direction: column;
+  font-weight: 300;
+  padding: 0 44px;
+}
 
-        .newsletter-signup-required {
-          align-self: end;
-          font: 300 16px Inter, sans-serif;
-          margin-top: 8px;
-        }
+.newsletter-signup-label {
+  color: #ec0e0e;
+  font: 300 16px Inter, sans-serif;
+  margin-top: 6px;
+}
 
-        .newsletter-signup-required-text {
-          color: rgba(0, 0, 0, 1);
-          font-size: 13px;
-        }
+.newsletter-signup-input {
+  background-color: #d9d9d9;
+  height: 27px;
+  margin-top: 4px;
+}
 
-        .newsletter-signup-form {
-          display: flex;
-          flex-direction: column;
-          font-weight: 300;
-          padding: 0 44px;
-        }
+.required {
+  color: #d70d0d;
+}
 
-        .newsletter-signup-label {
-          color: #ec0e0e;
-          font: 300 16px Inter, sans-serif;
-          margin-top: 6px;
-        }
-
-        .newsletter-signup-input {
-          background-color: #d9d9d9;
-          height: 27px;
-          margin-top: 4px;
-        }
-
-        .required {
-          color: #d70d0d;
-        }
-
-        .newsletter-signup-button {
-          align-self: start;
-        }
+.newsletter-signup-button {
+  align-self: start;
+}
