--- a/client/src/components/styles/ContactUs.css
+++ b/client/src/components/styles/ContactUs.css
@@ -1,7 +1,30 @@
+.container {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 0px;
+}
+.main-content {
+  display: flex;
+  flex-direction: column;
+  min-height: 758px;
+  position: relative;
+  width: 100%;
+}
+
 .contact-us-section {
-    text-align: center;
-    padding: 20px;
-  }
+  width: 80%;
+  margin: 20px;
+  padding: 20px;
+  background: url('../../images/background.PNG') no-repeat center center;
+  background-size: cover; /* Cover the entire area of the card */
+  color: #fff; /* Assuming white text to stand out on a likely dark background */
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  position: relative; /* Needed for layout positioning if additional elements are absolutely positioned */
+  align-self: center;
+}
   
   .contact-us-card {
     background-color: rgba(255, 255, 255, 0.6);
@@ -19,16 +42,14 @@
     margin-bottom: 20px;
   }
   .contact-us-section h1 {
-    margin-left: auto; /* Left aligns the h1 */
-    margin-right: auto; 
-    max-width: 1500px; /* Ensure consistency in width with the card */
-    width: 80%;
-    padding-left: 40px; /* Align the text to match the card's content */
-    padding-right: 40px; 
+    margin-left: auto; /* Aligns header to the center of its container */
+    margin-right: auto; /* Keeps it centered */
+    max-width: 1500px; /* Same as the card to keep width consistent */
+    width: 80%; /* Matches the card's width */
+    padding-left: 10px; /* Matches the card's left padding */
+    padding-right: 40px; /* Ensures padding is consistent on both sides */
     color: #333;
-    font-size: 24px; /* Adjust font size as needed */
-    padding-bottom: 20px; /* Space before the card */
-    margin-bottom: 0; /* Remove any default bottom margin */
+    text-align: left; 
 }
   
   .contact-us-card h2 {
