--- a/client/src/components/styles/LiveStreamCard.css
+++ b/client/src/components/styles/LiveStreamCard.css
@@ -1,3 +1,19 @@
+.live-stream-section {
+    width: 80%;
+    margin: 20px;
+    padding: 20px;
+    background: url('../../images/background.PNG') no-repeat center center;
+    background-size: cover;
+    /* Cover the entire area of the card */
+    color: #fff;
+    /* Assuming white text to stand out on a likely dark background */
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    position: relative;
+    /* Needed for layout positioning if additional elements are absolutely positioned */
+    align-self: center;
+}
+
 .live-stream-card {
     background-color: rgba(255, 255, 255, 0.6); /* Semi-transparent white background */
     padding: 40px; /* Provides padding around the content */
