--- a/client/src/components/styles/Home.css
+++ b/client/src/components/styles/Home.css
@@ -32,8 +32,8 @@
 }
 
 .section-title {
-  padding-right: 38%;
-  padding-left: 10px;
+  padding-right: 30%;
+  padding-left: 20px;
 }
 
 .announcements-section {
@@ -51,13 +51,13 @@
 
 .content-section {
   margin-top: 7px;
-  padding-left: 10px;
+  padding-left: 20px;
   position: relative;
 }
 
 .content-columns {
   display: flex;
-  gap: 20px;
+  gap: 10px;
 }
 
 .column {
@@ -70,9 +70,8 @@
 .search-input {
   border: 1px solid #ccc;
   border-radius: 4px;
-  margin-right: 8px;
   height: 20px;
-  align-self: center;
+  padding-right: 20px;
 }
 
 .search-input:focus {
